# cramming

./: .gitignore  pretrain.py  pyproject.toml
cramming/: utils.py
cramming/backend/: torch_default.py
cramming/config/impl/: _default.yaml
cramming/config/wandb/: default.yaml  schema.py
