[tool.poetry]
name = "cramming"
version = "0.1.0"
description = ""
authors = ["Felix Haba <felixh@u.northwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.13"
hydra-core = "^1.1"
datasets = "^2.8"
tokenizers = "^0.13.2"
transformers = "^4.25.1"
psutil = "^5.9.4"
einops = "^0.6.0"
zstandard = "^0.19.0"
apache-beam = "^2.45.0"
deepspeed = "^0.8.1"
evaluate = "^0.4.0"
scipy = "^1.10.1"
hydra = "^2.5"
scikit-learn = "^1.2.1"
wandb = "^0.13.10"
matplotlib = "^3.7.0"
torchvision = "^0.14.1"
torchmetrics = "^0.11.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
ipykernel = "^6.21.2"
kaggle = "^1.5.12"
torchsummary = "^1.5.1"
jupyter-contrib-nbextensions = "^0.7.0"
pyppeteer = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 140